# opencode-monitor

./: .gitattributes  .gitignore  .project-info  ANALYSIS-SECURITY-REPORTER.md  ANALYSIS.md  BENCHMARK-DQ-004.md  BUGFIX.md  BUG_FIX_REPORT.md  CHANGELOG.md  CHANGES.md  COMMANDS.md  DEVELOPMENT.md  DQ-005-COMPLETION.md  LICENSE  Makefile  QUICKSTART.md  README.md  STRUCTURE.md  install.sh  package.json  pyproject.toml  pyrightconfig.json  test_token_aggregation.py  uninstall.sh
.opencode/: AGENTS.md
audit-reports/: data-completeness-audit-2026-01-08.md
docs/: LOGGING.md  README.md  api.md  performance-analysis.md  structure.md
docs/architecture/: test-isolation-architecture.md  test-isolation-implementation-guide.md
docs/archive/: README.md
docs/backlog/: README.md  plan-21-dashboard-enrichment.md  plan-34-parts-enrichment.md  plan-35-todos-projects-loading.md  plan-40-test-improvement.md  plan-41-security-duckdb-migration.md  plan-42-security-unified-indexing.md
docs/design/: README.md
docs/epics/: epic-test-quality.md  epic-unified-indexer.md
docs/plans/: plan-42-unified-process-architecture.md  plan-43-security-heuristics-improvements.md  plan-44-scope-aware-security.md  plan-45b-ui-integration.md  plan-46-analysis.md  plan-46-architecture.md  plan-46-dashboard-enriched-data.md  plan-46-ui-design.md  plan-46-unified-indexer-v2.md  plan-46-validation.md  plan-47-data-quality-improvement.md  test-improvement-orchestration.md
docs/schemas/: database-indexes.md
docs/sprints/: 2026-01-data-quality-sprint0.md  2026-01-data-quality-sprint1.md  2026-01-data-quality-sprint2.md  2026-01-data-quality-sprint3.md  2026-01-parts-enrichment.md  2026-01-unified-indexer-v2-sprint1.md  README.md  code-quality-plan.md
launchd/: com.opencode.eventd.plist  com.opencode.usaged.plist
maintenance/: README.md
maintenance/reports/: ARCHITECTURE-REVIEW-SPRINT0.md  DQ-001-FIX-SUMMARY.md  DQ-003-COMPLETION.md  SPRINT0-EXECUTIVE-SUMMARY.md  SPRINT0-METRICS.csv  SPRINT0-METRICS.json  SPRINT0-QUANTITATIVE-ANALYSIS.md  SPRINT0-REPORTS-README.md  (+1 more)
plugins/: opencode.2s.sh
roadmap/: README.md  SPRINTS.md  plan-00-debug-logging.md  plan-01-tools-display.md  plan-02-sound-notifications.md  plan-03-session-structure.md  plan-05-rumps-migration.md  plan-06-tooltips-truncated.md  plan-07-permission-detection.md  plan-08-settings-panel.md  plan-09-icons-refinement.md  plan-10-system-notifications.md  plan-13-refactoring.md  plan-14-permission-detection.md  plan-15-ask-user-detection.md  plan-16-analytics.md  plan-18-opencode-hooks.md  plan-20-agent-tracing.md  plan-22-analytics-debugging.md  plan-23-datetime-selector.md  plan-25-open-session-terminal.md  plan-26-db-concurrency.md  plan-27-root-sessions-tracing.md  plan-28-tracing-data-strategy.md  plan-30-tracing-bugfixes.md  plan-31-tracing-ux-refinement.md  plan-32-tracing-datadog-vision.md  plan-36-schema-cleanup.md  plan-37-api-consolidation.md  plan-38-python-analysis-cli.md  plan-39-unified-indexer.md
scripts/: analyze_indexes.py  backfill.py  backfill_root_trace_tokens.py  bulk_enrichment.py  bulk_loader.py  bulk_queries.py  config.py  migration-report.py  mutation-report.sh  profile_dashboard.py  refresh_analytics.py  test-audit.sh  test_error_data_json.py
src/opencode_monitor/: __init__.py  (+12 more)
tests/: TESTING.md  conftest.py  factories.py  test_analytics.py  test_analytics_queries.py  test_api.py  test_api_security.py  test_api_timeline.py  test_app.py  test_auditor.py  test_batch_accumulator.py  test_builders.py  test_bulk_load.py  test_bulk_loader.py  test_client.py  test_correlator.py  test_dashboard_polling.py  test_dashboard_sync.py  test_dashboard_widgets.py  test_dashboard_window_coverage.py  test_database.py  test_db_concurrency.py  test_db_isolation.py  test_delegation_traces.py  test_enrichment_worker.py  test_file_tracker.py  test_hybrid_indexer.py  test_hybrid_indexer_resume.py  test_indexer.py  test_indexer_v2_integration.py  test_loader.py  test_logger.py  test_menu.py  test_mitre_tags.py  test_mitre_utils.py  test_models.py  test_monitor.py  test_path_extractor.py  test_pycode.py  test_race_conditions.py  (+21 more)
tools/: README.md  analyze_queries.py  profile_api.py  profile_dashboard.py
(+403 files in other folders)
