[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opencode-monitor"
version = "2.11.0"
description = "Monitor OpenCode instances from macOS menu bar"
requires-python = ">=3.12"
dependencies = [
    "rumps>=0.4.0",
    "aiohttp>=3.9.0",
    "duckdb>=1.0.0",
    "plotly>=5.0.0",
]

[project.scripts]
opencode-menubar = "opencode_monitor.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
