[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opencode-monitor"
version = "2.11.0"
description = "Monitor OpenCode instances from macOS menu bar"
requires-python = ">=3.12"
dependencies = [
    "rumps>=0.4.0",
    "aiohttp>=3.9.0",
    "duckdb>=1.0.0",
    "plotly>=5.0.0",
    "PyQt6>=6.6.0",
    "watchdog>=4.0.0",
    "flask>=3.1.2",
]

[project.scripts]
opencode-menubar = "opencode_monitor.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-qt>=4.4.0",
    "pytest-xdist>=3.5.0",
    "jedi>=0.19.0",
    "radon>=6.0.0",
    "vulture>=2.10",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
qt_api = "pyqt6"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[dependency-groups]
dev = [
    "pyinstrument>=5.1.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-qt>=4.5.0",
    "radon>=6.0.1",
    "vulture>=2.14",
]
