[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opencode-monitor"
version = "2.11.0"
description = "Monitor OpenCode instances from macOS menu bar"
requires-python = ">=3.12"
dependencies = [
    "rumps>=0.4.0",
    "aiohttp>=3.13.3",
    "duckdb>=1.0.0",
    "plotly>=5.0.0",
    "PyQt6>=6.6.0",
    "watchdog>=4.0.0",
    "flask>=3.1.2",
    "loguru>=0.7.3",
]

[project.scripts]
opencode-menubar = "opencode_monitor.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-qt>=4.4.0",
    "pytest-xdist>=3.5.0",
    "jedi>=0.19.0",
    "radon>=6.0.0",
    "vulture>=2.10",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
qt_api = "pyqt6"
testpaths = ["tests"]
pythonpath = ["src"]
timeout = 10
timeout_method = "thread"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "legacy: old test style (to be migrated)",
    "unit: unit tests",
    "e2e: end-to-end tests",
]

# =============================================================================
# Mutation Testing Configuration
# =============================================================================

# [tool.mutmut] - commented out to use CLI options for mutmut v2
# paths_to_mutate = ["src/opencode_monitor/security/analyzer/risk.py"]
# do_not_mutate = []
# pytest_add_cli_args_test_selection = ["tests/test_risk_analyzer.py", "-x"]

[dependency-groups]
dev = [
    "bandit>=1.9.2",
    "jedi>=0.19.0",
    "mutmut==2.5.1",
    "mypy>=1.19.1",
    "pip-audit>=2.10.0",
    "pyinstrument>=5.1.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=4.0.0",
    "pytest-qt>=4.5.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "radon>=6.0.1",
    "ruff>=0.9.0",
    "safety>=3.7.0",
    "vulture>=2.14",
    # Test migration dependencies
    "pytest-mock>=3.14.0",
    "freezegun>=1.5.0",
    "aioresponses>=0.7.6",
    "responses>=0.25.0",
    "faker>=28.0.0",
    "factory-boy>=3.3.0",
    "pytest-randomly>=3.15.0",
    "pytest-clarity>=1.0.1",
]
